# hxh

./: .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix  hxh.cabal  hxh.nix
app/: DateCommands.hs  LatexCommands.hs  Main.hs  MarkdownFormatter.hs  TableFormatter.hs  Tableformatter.hs
data/: template.tex
