cabal-version:      3.4
name:               hxh
version:            0.1.0.0
synopsis:           Helix Haskell extensions
-- description:
license:            MIT
license-file:       LICENSE
author:             Ferenc Lukács
maintainer:         flukacs561@gmail.com
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable hxh
    import:           warnings
    main-is:          Main.hs
    other-modules:    TableFormatter, DateCommands, LatexCommands
    -- other-extensions:
    build-depends:    base, time, text
    hs-source-dirs:   app
    default-language: Haskell2010
